начало изменения google map

--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -198,8 +198,8 @@
 
 #google_dialog {
     padding:10px;
-    width:435px;
-    height:420px;
+    width:700px;
+    height:540px
 }
 
 .restaurant_header {
