--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@
 -------------------------------------------------------------------*/
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,
 blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,
-font,img,ins,kbd,q,s,samp,small,strike,sub,sup,tt,var,dl,dt,dd,
+font,img,ins,kbd,q,s,samp,small,strike,sub,tt,var,dl,dt,dd,
 ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td {
     border:0;
     outline:0;
