--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -261,11 +261,10 @@
 .work_time {
     width: 80px;
     height:35px;
-    padding-left:40px;
+    padding-left:30px;
     float:right;
     font-size:11px;
     margin-top:5px;
-    margin-right: 80px;
 }
 
 .work_time.closed{
@@ -277,7 +276,6 @@
 
 .work_time span {
     color: #009900;
-    line-height: 20px;
 }
 
 .rest_params {
@@ -348,7 +346,7 @@
 }
 .rest_reviews .caption {
     background: url(/public/images/icons/reviews_icon.jpg) no-repeat;
-    height:32px;
+    height:30px;
     line-height:30px;
     vertical-align:bottom;
     color:#ff6600;
@@ -949,63 +947,46 @@ table.table_layout td {
 	color:#000000;
 }
 
-
-.by_date {
-    margin:20px 0;
-    padding:20px 0 0 0;
-    min-height:300px;
+.anounce_block {
+	margin:0 40px;
 }
 
-.by_date.tomorrow {
-    background:url(/public/images/gray_bg_box_top.jpg) repeat-x #c8c8c8;
+.anounce_block .caption {
+	text-transform:uppercase;
+	font-size:35px;
+	padding: 35px 0 30px 0;
 }
-.by_date .bottom {
-    background:url(/public/images/gray_bg_box_bottom.jpg) repeat-x #c8c8c8 bottom;
-    width:100%;
-    height:20px;
-}
-.afisha_list .current_date {
-    float:left;
-    margin:0 20px;
+.anounce_block .left, .anounce_block .right, .anounce_block .center {
+	float:left;
+	width:33%;
 }
 
-.afisha_list .list {
-    float:left;
-    width:80%;
+.anounce_block .item {
+	margin: 0 0 30px 0;
 }
-.afisha_list .list .item {
-    float:left;
-    margin:0 40px 20px 0;
-    width:380px;
-    height: 85px;
+
+.anounce_block .item .img {
+	float:left;
+	margin-right:5px;
 }
-.afisha_list .list .foto {
-    float:left;
+
+.anounce_block .item .info {
+	float:left;
+	margin-right:5px;
+	width:190px;
 }
-.afisha_list .list .info {
-    width:220px;
-    padding-left:10px;
-    float:left;
+.anounce_block .item .title {
+	font-size:22px;
 }
-.afisha_list .list .info .caption{
-    font-size:18px;
+
+.anounce_block .item .rest_title {
+	font-size:13px;
+	color:#ff6600;
 }
-.afisha_list .list .info .rest_name{
-    font-weight:bold;
-    font-size:12px;
-    color:#de6e0a;
+.anounce_block .item .description {
+	font-size:13px;
 }
-.afisha_list .list .info .description {
-    padding-top:10px;
-}
-.afisha_list .right_banner {
-    width:204px;
-    background:#666666;
-    height:321px;
-    position:absolute;
-    right: 10px;
-    margin-top:-20px;
-}
+
 /************************ /AFISHA_INDEX *******************************/
 
 
