--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -402,7 +402,7 @@
     color:#ffffff;
     margin-top:5px;
     margin-bottom:10px;
-	margin-left:10px;
+    margin-left:10px;
 }
 .rest_reviews .form input:active {
     background:url(/public/images/submit_button_reviews.jpg) 1px 1px no-repeat;
@@ -856,21 +856,21 @@ table.table_layout td {
 
 #mounth_list #mounth {
     float:left;
-	font-size:18px;
-	text-transform:uppercase;
-	line-height:48px;
-	width:150px;
-	overflow:hidden;
+    font-size:18px;
+    text-transform:uppercase;
+    line-height:48px;
+    width:150px;
+    overflow:hidden;
 }
 
 #mounth_list #mounths_conteiner {
-	width:3000px;
+    width:3000px;
 }
 
 #mounths_conteiner .item{
-	float:left;
-	width:150px;
-	text-align:center;
+    float:left;
+    width:150px;
+    text-align:center;
 }
 
 #mounth_list .next{
@@ -880,7 +880,7 @@ table.table_layout td {
     height:24px;
     background:url(/public/images/icons/next_icon.png) no-repeat 0 0;
     float:right;
-	margin-right:10px;
+    margin-right:10px;
 }
 .afisha_list{
 
@@ -891,7 +891,7 @@ table.table_layout td {
     margin: 20px 0;
     height:48px;
     background:url(../images/icons/afisha_date_list_bg.png) #999999 repeat-x;
-	margin-left:301px;
+    margin-left:301px;
 }
 .afisha_list .date_list .back{
     float:left;
@@ -937,55 +937,56 @@ table.table_layout td {
     font-size:43px;
     padding-bottom:10px;
     text-transform: uppercase;
-	color:#FFFFFF;
+    color:#FFFFFF;
 }
 .afisha_list .date_list .item.current div {
-	color:#000000;
+    color:#000000;
 }
 
 .afisha_list .date_list .item div  sup{
-	font-size:19px;
-	color:#000000;
+    font-size:19px;
+    color:#000000;
 }
 
 .anounce_block {
-	margin:0 40px;
+    min-height: 700px;
+    margin:0 40px;
 }
 
 .anounce_block .caption {
-	text-transform:uppercase;
-	font-size:35px;
-	padding: 35px 0 30px 0;
+    text-transform:uppercase;
+    font-size:35px;
+    padding: 35px 0 30px 0;
 }
 .anounce_block .left, .anounce_block .right, .anounce_block .center {
-	float:left;
-	width:33%;
+    float:left;
+    width:33%;
 }
 
 .anounce_block .item {
-	margin: 0 0 30px 0;
+    margin: 0 0 30px 0;
 }
 
 .anounce_block .item .img {
-	float:left;
-	margin-right:5px;
+    float:left;
+    margin-right:5px;
 }
 
 .anounce_block .item .info {
-	float:left;
-	margin-right:5px;
-	width:190px;
+    float:left;
+    margin-right:5px;
+    width:190px;
 }
 .anounce_block .item .title {
-	font-size:22px;
+    font-size:22px;
 }
 
 .anounce_block .item .rest_title {
-	font-size:13px;
-	color:#ff6600;
+    font-size:13px;
+    color:#ff6600;
 }
 .anounce_block .item .description {
-	font-size:13px;
+    font-size:13px;
 }
 
 /************************ /AFISHA_INDEX *******************************/
