--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -261,10 +261,11 @@
 .work_time {
     width: 80px;
     height:35px;
-    padding-left:30px;
+    padding-left:40px;
     float:right;
     font-size:11px;
     margin-top:5px;
+	margin-right:80px;
 }
 
 .work_time.closed{
@@ -956,7 +957,7 @@ table.table_layout td {
 .anounce_block .caption {
     text-transform:uppercase;
     font-size:35px;
-    padding: 35px 0 30px 0;
+    padding: 15px 0 10px 0;
 }
 .anounce_block .left, .anounce_block .right, .anounce_block .center {
     float:left;
@@ -969,7 +970,7 @@ table.table_layout td {
 
 .anounce_block .item .img {
     float:left;
-    margin-right:5px;
+    margin-right:15px;
 }
 
 .anounce_block .item .info {
@@ -984,6 +985,7 @@ table.table_layout td {
 .anounce_block .item .rest_title {
     font-size:13px;
     color:#ff6600;
+	padding:3px 0;
 }
 .anounce_block .item .description {
     font-size:13px;
