--- a/public/css/style.css
+++ b/public/css/style.css
@@ -700,10 +700,9 @@ html {
     clear:both;
 }
 
-#loader {
+.loader {
     width:48px;
     height:48px;
-    display:none;
     margin:200px auto auto;
 }
 
