--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1188,3 +1188,51 @@ a:hover,a.no_decoration {
 	margin: 0 auto; 
 	max-width: 1480px;
 }
+
+
+
+
+
+
+
+
+/* 404
+***********************************************/
+body.error404 {
+	background:#000000;
+	color:#FFFFFF;
+}
+
+div.error404 {
+	margin:0 auto;
+	margin-top:100px;
+	
+	width:750px;
+}
+
+.logo404 {
+	float:left;
+	margin-right:30px;
+}
+
+.text404 {
+	float:left;
+	padding:10px 0;
+	font-size:15px;
+}
+
+.title404 {
+	color:#ff6600;
+	font-size:39px;
+}
+
+.menu404 {
+	color:#009900;
+	font-size:15px;
+}
+
+.menu404 a {
+	margin-right:10px;
+	color:#009900;
+	font-size:15px;
+}
