--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,
 blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,
 font,img,ins,kbd,q,s,samp,small,strike,sub,tt,var,dl,dt,dd,
-ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td {
+ol,ul,li,fieldset,form,label,legend,table,b,caption,tbody,tfoot,thead,tr,th,td {
     border:0;
     outline:0;
     font-weight:inherit;
