--- a/public/css/style.css
+++ b/public/css/style.css
@@ -694,7 +694,14 @@ html {
     color:#fff;
     vertical-align:top;
 }
-
+.smi {
+    float:left;
+    font-size: 9px;
+    color:#ddd;
+    padding-top: 18px;
+    padding-left: 10px;
+    font-family: Verdana, Arial, Tahoma;
+}
 /******************************** CLASS *****************************/
 .clear {
     clear:both;
@@ -1139,7 +1146,6 @@ a:hover,a.no_decoration {
 
 }
 
-
 .dialog .form_checkbox,#auth_dialog #remain_me_check {
     margin-top:8px;
     float:right;
@@ -1193,13 +1199,6 @@ a:hover,a.no_decoration {
 	margin: 0 auto; 
 	max-width: 1480px;
 }
-
-
-
-
-
-
-
 
 /* 404
 ***********************************************/
