--- a/public/css/main.css
+++ b/public/css/main.css
@@ -165,6 +165,11 @@
     text-align:center;
 }
 
+#restaurant_new .opened a{
+	text-decoration:none;
+	color:#d84705;
+}
+
 #restaurant_new	.box_for_shadow {
     width:230px;
     height:250px;
