--- a/public/css/main.css
+++ b/public/css/main.css
@@ -285,7 +285,7 @@
 #restaurant_poster .poster_title {
     margin-top:5px;
     display:block;
-    color:#E27B09;
+    color:#F60;
     font-size:14px;
 }
 
