супер-поиск по ресторанам

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,7 +74,9 @@ table td {
     margin:0;
     padding:0;
 }
-
+.highlight {
+    color:#f60;
+}
 /* Основные блоки
 -------------------------------------------------------------------*/
 html {
