fix rest photo list

--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -79,6 +79,7 @@
 #restaurant_info .photos .main{
     width:360px;
     margin-bottom: 6px;
+    display: none;
 }
 #restaurant_info .photos .mini{
     width:55px;
