--- a/blog/templates/skin/new/css/style.css
+++ b/blog/templates/skin/new/css/style.css
@@ -919,10 +919,129 @@ table.admin_page td  {  /* IE: */ border-left: expression(previousSibling == nul
 
 .hidden {display: none;}
 
+/* Диалоги
+- ---------------------------------------------------------------------*/
+.dialog_box {
+    position:fixed;
+    left:50%;
+    margin-left:-220px;
+    top:200px;
+    width:440px;
+    background:#fff;
+    border:4px solid #86a515;
+    z-index:100000;
+    display:none;
+}
 
+.dialog .caption {
+    height:34px;
+    width:100%;
+}
 
+.dialog .close_button {
+    width:18px;
+    height:18px;
+    background:#86a515;
+    float:right;
+    cursor:pointer;
+    margin: 8px 8px 0 0;
+}
 
+.dialog .title {
+    font-size:25px;
+    width:100%;
+    color:#86a515;
+    text-align:center;
+}
 
+.dialog .message {
+    margin-top:10px;
+    width:100%;
+    text-align:center;
+    color:#ff6600;
+    height:16px;
+}
+
+.dialog .form_dialog {
+    width:auto;
+    padding:0 23px;
+}
+
+.dialog .form_input {
+    width:100%;
+    font-size:24px;
+    border:1px solid #000;
+    text-align:center;
+    height:44px;
+}
+
+.dialog .form_loader {
+    display:none;
+    float:left;
+    position:absolute;
+    padding-left:5px;
+}
+
+.dialog .label {
+    font-size:11px;
+    color:#505050;
+    text-align:center;
+    margin:8px 0 3px;
+}
+#auth_dialog {
+    height:360px;
+    text-align:center;
+}
+
+#auth_dialog #remain_me {
+    float:right;
+    font-size:11px;
+    margin:8px 0 0 5px;
+}
+#registration_dialog {
+    height:447px;
+    text-align:center;
+}
+
+#passwd_dialog {
+    height:240px;
+    text-align:center;
+}
+#auth_dialog #auth_submit,
+#registration_dialog #registration_submit,
+#passwd_dialog #passwd_submit{
+    width:195px;
+    height:55px;
+    background:url(/public/images/auth_button);
+    border:none;
+    cursor:pointer;
+    color:#FFF;
+    font-size:14px;
+    text-shadow:-1px 0 0 #777;
+	display:block;
+	margin:0 auto;
+}
+
+#auth_dialog #auth_submit:active,
+#registration_dialog #registration_submit:active,
+#passwd_dialog #passwd_submit:active{
+    background:url(/public/images/auth_button_active);
+}
+.dialog .form_checkbox,#auth_dialog #remain_me_check {
+    margin-top:8px;
+    float:right;
+}
+
+#body_fill {
+    display:none;
+    width:100%;
+    height:100%;
+    background: #000;
+    position:fixed;
+    z-index:9999;
+    top:0;
+    left:0;
+}
 
 
 
