--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -1040,7 +1040,14 @@ table.table_layout td {
 }
 
 /*********** /calendar *************/
-/***********CLASS*************/
+/***********TO CHTO PROEBALI*************/
+
+.description .name{
+	padding-bottom:6px;
+	padding-top:10px;
+}
+
+
 
 /***********CLASS*************/
 .caption{
