--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -1039,6 +1039,12 @@ table.table_layout td {
     padding-top:5px;
 }
 
+
+
+.auth_page {
+    width: 50%;
+    
+}
 /*********** /calendar *************/
 /***********TO CHTO PROEBALI*************/
 
