--- a/public/css/main.css
+++ b/public/css/main.css
@@ -195,6 +195,7 @@
     cursor:pointer;
     margin:0 20px 0 -60px;
     padding:5px 5px 5px 8px;
+	width:200px;
 }
 
 #restaurant_discount .discount .description {
