--- a/public/css/style.css
+++ b/public/css/style.css
@@ -553,7 +553,8 @@ html {
 }
 
 .restaurant_tags .item {
-    width:50px;
+    height: 52px;
+    width:52px;
     text-align:center;
     float:left;
     margin:5px 1px;
@@ -561,8 +562,16 @@ html {
     cursor:pointer;
 }
 
+.restaurant_tags .item:hover {
+    border:1px solid #a1a1a1;
+    width:50px;
+    height: 50px;
+}
+
 .restaurant_tags .item.current {
     border:1px solid #ff6600;
+    width:50px;
+    height: 50px;
 }
 
 .restaurant_tags .item .text {
