--- a/public/css/style.css
+++ b/public/css/style.css
@@ -715,7 +715,7 @@ html {
     background:#000;
     color:#FFF;
     margin-top:20px;
-	font-size:16xpx;
+	font-size:11px;
 }
 
 #copyright .left {
