--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,6 @@
     Author      : valmon, z-mode
     Description : Основной CSS файл
 
-
     Основные цвета сайта:
     Оранжевый : #FF6600;
     Зелёный : #009900;
@@ -15,21 +14,26 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,
 blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,
 font,img,ins,kbd,q,s,samp,small,strike,sub,tt,var,dl,dt,dd,
 ol,ul,li,fieldset,form,label,legend,table,b,caption,tbody,tfoot,thead,tr,th,td {
-    border:0;
-    outline:0;
-    font-weight:inherit;
-    font-style:inherit;
-    font-size:100%;
-    font-family:inherit;
-    vertical-align:baseline;
-    margin:0;
-    padding:0;
+    border:0;outline:0;font-weight:inherit;font-style:inherit;margin:0;
+    font-size:100%;font-family:inherit;vertical-align:baseline;padding:0;
 }
-
-:focus {
-    outline:0;
+:focus {outline:0;}
+ol,ul {list-style:none;}
+table {
+    border-collapse:collapse;border:none;
+    empty-cells:show;border-spacing:0;width:100%;
 }
-
+caption,th,td {text-align:left;font-weight:normal;}
+blockquote:before,blockquote:after,q:before,q:after {content:"";}
+blockquote,q {quotes:"" "";}
+a {text-decoration:underline;color:#000;}
+a:hover,a.no_decoration {text-decoration:none;}
+table td {margin:0;padding:0;}
+/* Основные блоки
+-------------------------------------------------------------------*/
+html {
+    width:100%;
+}
 body {
     line-height:1;
     font-family:Tahoma,Arial;
@@ -39,50 +43,6 @@ body {
     min-width:1000px;
     width:expression(document.body.clientWidth < 1004? "1004px": "auto" );
 }
-
-ol,ul {
-    list-style:none;
-}
-
-table {
-    border-collapse:collapse;
-    border:none;
-    empty-cells:show;
-    border-spacing:0;
-    width:100%;
-}
-
-caption,th,td {
-    text-align:left;
-    font-weight:normal;
-}
-
-blockquote:before,blockquote:after,q:before,q:after {
-    content:"";
-}
-
-blockquote,q {
-    quotes:"" "";
-}
-
-a {
-    text-decoration:underline;
-    color:#000;
-}
-
-table td {
-    margin:0;
-    padding:0;
-}
-.highlight {
-    color:#f60;
-}
-/* Основные блоки
--------------------------------------------------------------------*/
-html {
-    width:100%;
-}
-
 /* Блок с логотипом и баннером
 -------------------------------------------------------------------*/
 .banner770 {
@@ -93,7 +53,6 @@ html {
     margin-right:10px;
     z-index: 7;
 }
-
 .banner240n320 {
     width:240px;
     height:350px;
@@ -101,18 +60,15 @@ html {
     margin-top:10px;
 
 }
-
 #header {
     height:170px;
     background:#000;
     padding:10px 0 0 40px;
 }
-
 #logo {
     padding-top: 25px;
     float:left;
 }
-
 /* Меню сайта
 -------------------------------------------------------------------*/
 #topMenu {
@@ -142,7 +98,6 @@ html {
     color:#000;
 }
 
-/* ПОИСК
 /* Меню поиска
 -------------------------------------------------------------------*/
 #search_menu {
@@ -188,12 +143,10 @@ html {
     margin-bottom:5px;
     height:222px;
 }
-
 #moods {
     padding-top:10px;
     width:100%;
 }
-
 #moods #bar_top {
     padding-left:2px;
     width:100%;
@@ -203,7 +156,6 @@ html {
 #moods #bar {
     position:relative;
 }
-
 #moods #cursor_top {
     width:100%;
     background:#cccccc;
@@ -212,14 +164,6 @@ html {
     margin:10px 0;
     padding:2px 0 0 3px;
 }
-
-#cursor_top .left_border,#cursor_top .right_border {
-    width:23px;
-    height:18px;
-    float:left;
-    background:url(/public/images/scroll_borders.png) no-repeat;
-}
-
 #cursor_top .left_text,#cursor_top .right_text {
     position:absolute;
     cursor:pointer;
@@ -228,29 +172,21 @@ html {
     font-size:12px;
     padding-top:2px;
 }
+#cursor_top .left_text {left:50px;}
 
-#cursor_top .left_text {
-    left:50px;
-}
-
-#cursor_top .right_text {
-    right:50px;
-}
-
+#cursor_top .right_text {right:50px;}
 #cursor .scroll_left {
     float:left;
     background:url(/public/images/scroll_left.jpg) top center no-repeat;
     width:19px;
     height:18px;
 }
-
 #cursor .scroll_right {
     float:right;
     background:url(/public/images/scroll_right.jpg) top center no-repeat;
     width:19px;
     height:18px;
 }
-
 #moods #cursor {
     background:url(/public/images/scroll.jpg) top center;
     width:165px;
@@ -258,7 +194,7 @@ html {
     cursor:pointer;
     float:left;
 }
-
+#cursor_top .right_border,#footer_right .more,.float_right {float:right;}
 #moods .icon {
     padding-top:2px;
     float:left;
@@ -296,13 +232,6 @@ html {
     border-bottom:1px solid #666666;
 
 }
-
-#moods .count span {
-    background:#b6b6b6;
-    padding:2px 4px;
-}
-
-
 
 /* Панель алфавита
 -------------------------------------------------------------------*/
@@ -756,21 +685,14 @@ html {
 .smi a:hover{
 	color:#FF6600;
 }
-/******************************** CLASS *****************************/
-.clear {
-    clear:both;
-}
-
-.loader {
-    width:48px;
-    height:48px;
-    margin:200px auto auto;
-}
-
-.swfobject {
-    display:none;
-}
-
+/* Class
+- ---------------------------------------------------------------------*/
+.highlight {color:#f60;}
+.clear {clear:both;}
+.loader {width:48px;height:48px;margin:200px auto auto;}
+.swfobject {display:none;}
+.margin020 {margin:0 16px;}
+.margin0autoMax-width1600 {margin: 0 auto;max-width: 1480px;}
 /* Диалоги
 - ---------------------------------------------------------------------*/
 .dialog_box {
@@ -784,12 +706,10 @@ html {
     z-index:100000;
     display:none;
 }
-
 .dialog .caption {
     height:34px;
     width:100%;
 }
-
 .dialog .close_button {
     width:18px;
     height:18px;
@@ -798,14 +718,12 @@ html {
     cursor:pointer;
     margin: 8px 8px 0 0;
 }
-
 .dialog .title {
     font-size:25px;
     width:100%;
     color:#86a515;
     text-align:center;
 }
-
 .dialog .message {
     margin-top:10px;
     width:100%;
@@ -813,12 +731,10 @@ html {
     color:#ff6600;
     height:16px;
 }
-
 .dialog .form_dialog {
     width:auto;
     padding:0 23px;
 }
-
 .dialog .form_input {
     width:100%;
     font-size:24px;
@@ -826,14 +742,12 @@ html {
     text-align:center;
     height:44px;
 }
-
 .dialog .form_loader {
     display:none;
     float:left;
     position:absolute;
     padding-left:5px;
 }
-
 .dialog .label {
     font-size:11px;
     color:#505050;
@@ -869,10 +783,10 @@ html {
     max-width: 394px;
     margin-bottom: 10px;
 }
-#auth_dialog #auth_submit,
-#registration_dialog #registration_submit,
-#callback_dialog #callback_submit,
-#passwd_dialog #passwd_submit{
+#auth_submit,
+#registration_submit,
+#callback_submit,
+#passwd_submit{
     width:195px;
     height:55px;
     background:url(/public/images/auth_button);
@@ -884,10 +798,8 @@ html {
     display:block;
     margin:0 auto;
 }
-#auth_dialog #auth_submit:active,
-#registration_dialog #registration_submit:active,
-#callback_dialog #callback_submit:active,
-#passwd_dialog #passwd_submit:active{
+#auth_submit:active,#registration_submit:active,
+#callback_submit:active,#passwd_submit:active{
     background:url(/public/images/auth_button_active);
 }
 
@@ -901,211 +813,8 @@ html {
     top:0;
     left:0;
 }
-/******************************** Вывод сообщения *****************************/
-#message_dialog {
-    display:none;
-    position: absolute;
-    left:40px;
-    top:0px;
-    width:300px;
-    background:gray;
-    padding:25px 12px;
-    -webkit-border-bottom-left-radius:5px;
-    -webkit-border-bottom-right-radius:5px;
-    -moz-border-radius:0 0 5px 5px;
-    border-radius:0 0 5px 5px;
-}
-
-/*************************************** ЗАКРУГЛЯНИЯ ****************************/
-.border_1px_6e6e6e {
-    border:1px #6e6e6e solid;
-}
-
-.padding10 {
-    padding:10px;
-}
-
-.rounded {
-    -moz-border-radius:3px;
-    -webkit-border-radius:3px;
-    border-radius:3px;
-}
-
-.rounded_left {
-    -webkit-border-top-left-radius:3px;
-    -webkit-border-bottom-left-radius:3px;
-    -moz-border-radius:3px 0 0 3px;
-    border-radius:3px 0 0 3px;
-}
-
-.rounded_right {
-    -webkit-border-top-right-radius:3px;
-    -webkit-border-bottom-right-radius:3px;
-    -moz-border-radius:0 3px 3px 0;
-    border-radius:0 3px 3px 0;
-}
-
-.rounded_bottom {
-    -webkit-border-bottom-left-radius:3px;
-    -webkit-border-bottom-right-radius:3px;
-    -moz-border-radius:0 0 3px 3px;
-    border-radius:0 0 3px 3px;
-}
-
-.box_shadow {
-    -moz-box-shadow:2px 2px 3px #969696;
-    -webkit-box-shadow:2px 2px 3px #969696;
-}
-
-.box_shadow_not_ie {
-    -moz-box-shadow:2px 2px 3px #969696;
-    -webkit-box-shadow:2px 2px 3px #969696;
-    box-shadow:2px 2px 3px #969696;
-}
-
-.text_shadow {
-    text-shadow:#aaa 1px 1px 1px;
-}
-
-/*************************** Форма комментария к рейтингу **************************/
-.rating_comment {
-    position:absolute;
-    display:none;
-    width:176px;
-    height:198px;
-    border:#898989 1px solid;
-    background:#fff;
-    z-index:100;
-    margin-left:-3px;
-    margin-top:-186px;
-    cursor:default;
-    padding:15px 25px;
-}
-
-.plus .rating_comment {
-    margin-left:-188px;
-}
-
-.minus .rating_comment {
-    margin-left:-17px;
-}
-
-.rating_comment textarea {
-    width:150px;
-    height:127px;
-    max-width:150px;
-    max-height:127px;
-    border:1px #489615 solid;
-    font-family:Calibri,Verdana,Arial;
-    font-size:13px;
-    padding:10px;
-}
-
-.rating_comment textarea:hover {
-    border-width:2px;
-    padding:9px;
-}
-
-.rating_comment	.closeButton {
-    position:absolute;
-    top:2px;
-    right:2px;
-    cursor:pointer;
-}
-
-.rating_comment	.closeButton img {
-    width:18px;
-}
-
-.rating_comment input[type=submit] {
-    border:1px #489615 solid;
-    font-family:Calibri,Verdana,Arial;
-    font-size:14px;
-    width:172px;
-    text-align:center;
-    margin-top:20px;
-    background:#DDD;
-    cursor:pointer;
-    padding:1px;
-}
-
-.rating_comment input[type=submit]:hover {
-    border-width:2px;
-    padding:0;
-}
-
-.rating_comment input[type=submit]:active {
-    color:#777;
-    background:#BBB;
-    border-width:2px;
-    padding:0;
-}
-
-.rating_comment.message {
-    line-height:18px;
-    font-size:14px;
-    text-align:center;
-}
-
-.rating_comment.message .reg {
-    margin-top: 45px;
-}
-
-.rest_rating {
-    width:200px;
-    height:26px;
-    border:1px solid #ffffff;
-    margin:8px 0 0 8px;
-    padding:3px 0 0 4px;
-}
-
-.rest_rating.white {
-    border:0;
-    padding:4px 1px 1px 5px;
-}
-
-.rating_complete {
-    margin: 3px 0 0 1px;
-    height:18px;
-    position:absolute;
-    background:#ffd9a6;
-    max-width:143px;
-}
-
-.rating_line {
-    background:url(/public/images/rating_line_bg.png) no-repeat;
-    width:147px;
-    text-align:center;
-    line-height:22px;
-    height:24px;
-    float:left;
-    color:#000000;
-}
-
-.minus,.plus {
-    width:24px;
-    height:24px;
-    float:left;
-    cursor:pointer;
-}
-
-.minus {
-    background:url(/public/images/icons/minus.png) 0 0 no-repeat;
-}
-
-.minus:active {
-    background:url(/public/images/icons/minus.png) 0 -24px no-repeat;
-}
-
-.plus {
-    background:url(/public/images/icons/plus.png) 0 0 no-repeat;
-}
-
-.plus:active {
-    background:url(/public/images/icons/plus.png) 0 -24px no-repeat;
-}
-
-/********** DISCOUNT DIALOG ***********/
+/* Диалог выдачи скидки
+- ---------------------------------------------------------------------*/
 #discount_dialog {
     width:592px;
     left:50%;
@@ -1208,17 +917,6 @@ html {
     margin:0 auto;
 }
 
-a:hover,a.no_decoration {
-    text-decoration:none;
-}
-#footer_right .more a{
-    color:#ff6600;
-}
-#cursor_top .right_border,#footer_right .more,.float_right {
-    float:right;
-
-}
-
 .dialog .form_checkbox,#auth_dialog #remain_me_check {
     margin-top:8px;
     float:right;
@@ -1232,85 +930,184 @@ a:hover,a.no_decoration {
     font-size:18px;
 }
 
-#recomended_gallery .rest_rating {
-    position:absolute;
-    margin-top: -44px;
+/******************************** Вывод сообщения *****************************/
+#message_dialog {
+    display:none;
+    position: absolute;
+    left:40px;
+    top:0px;
+    width:300px;
+    background:gray;
+    padding:25px 12px;
+    -webkit-border-bottom-left-radius:5px;
+    -webkit-border-bottom-right-radius:5px;
+    -moz-border-radius:0 0 5px 5px;
+    border-radius:0 0 5px 5px;
 }
-/************* ICONS **************/
+/* Закругления
+- ---------------------------------------------------------------------*/
+.border_1px_6e6e6e {border:1px #6e6e6e solid;}
+.padding10 {padding:10px;}
+.rounded {-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;}
+.rounded_left {
+    -webkit-border-top-left-radius:3px;-webkit-border-bottom-left-radius:3px;
+    -moz-border-radius:3px 0 0 3px;border-radius:3px 0 0 3px;
+}
+.rounded_right {
+    -webkit-border-top-right-radius:3px;-webkit-border-bottom-right-radius:3px;
+    -moz-border-radius:0 3px 3px 0;border-radius:0 3px 3px 0;
+}
+.rounded_bottom {
+    -webkit-border-bottom-left-radius:3px;-webkit-border-bottom-right-radius:3px;
+    -moz-border-radius:0 0 3px 3px;border-radius:0 0 3px 3px;
+}
+.box_shadow {
+    -moz-box-shadow:2px 2px 3px #969696;-webkit-box-shadow:2px 2px 3px #969696;
+}
+.box_shadow_not_ie {
+    -moz-box-shadow:2px 2px 3px #969696;-webkit-box-shadow:2px 2px 3px #969696;
+    box-shadow:2px 2px 3px #969696;
+}
+.text_shadow {text-shadow:#aaa 1px 1px 1px;}
 
+/* Форма комментария к рейтингу на главной
+- ---------------------------------------------------------------------*/
+.rating_comment {
+    position:absolute;
+    display:none;
+    width:176px;
+    height:198px;
+    border:#898989 1px solid;
+    background:#fff;
+    z-index:100;
+    margin-left:-3px;
+    margin-top:-186px;
+    cursor:default;
+    padding:15px 25px;
+}
+.plus .rating_comment {
+    margin-left:-188px;
+}
+.minus .rating_comment {
+    margin-left:-17px;
+}
+.rating_comment textarea {
+    width:150px;
+    height:127px;
+    max-width:150px;
+    max-height:127px;
+    border:1px #489615 solid;
+    font-family:Calibri,Verdana,Arial;
+    font-size:13px;
+    padding:10px;
+}
+.rating_comment textarea:hover {
+    border-width:2px;
+    padding:9px;
+}
+.rating_comment	.closeButton {
+    position:absolute;
+    top:2px;
+    right:2px;
+    cursor:pointer;
+}
+.rating_comment	.closeButton img {
+    width:18px;
+}
+.rating_comment input[type=submit] {
+    border:1px #489615 solid;
+    font-family:Calibri,Verdana,Arial;
+    font-size:14px;
+    width:172px;
+    text-align:center;
+    margin-top:20px;
+    background:#DDD;
+    cursor:pointer;
+    padding:1px;
+}
+.rating_comment input[type=submit]:hover {
+    border-width:2px;
+    padding:0;
+}
+.rating_comment input[type=submit]:active {
+    color:#777;
+    background:#BBB;
+    border-width:2px;
+    padding:0;
+}
+.rating_comment.message {
+    line-height:18px;
+    font-size:14px;
+    text-align:center;
+}
+.rating_comment.message .reg {
+    margin-top: 45px;
+}
+.rest_rating {
+    width:200px;
+    height:26px;
+    border:1px solid #ffffff;
+    margin:8px 0 0 8px;
+    padding:3px 0 0 4px;
+}
+.rest_rating.white {
+    border:0;
+    padding:4px 1px 1px 5px;
+}
+.rating_complete {
+    margin: 3px 0 0 1px;
+    height:18px;
+    position:absolute;
+    background:#ffd9a6;
+    max-width:143px;
+}
+.rating_line {
+    background:url(/public/images/rating_line_bg.png) no-repeat;
+    width:147px;
+    text-align:center;
+    line-height:22px;
+    height:24px;
+    float:left;
+    color:#000000;
+}
+.minus,.plus {
+    width:24px;
+    height:24px;
+    float:left;
+    cursor:pointer;
+}
+.minus {background:url(/public/images/icons/minus.png) 0 0 no-repeat;}
+.minus:active {background:url(/public/images/icons/minus.png) 0 -24px no-repeat;}
+.plus {background:url(/public/images/icons/plus.png) 0 0 no-repeat;}
+.plus:active {background:url(/public/images/icons/plus.png) 0 -24px no-repeat;}
+#recomended_gallery .rest_rating {position:absolute;margin-top: -44px;}
+/* Icons
+- ---------------------------------------------------------------------*/
 .dostavka_icon {
     background:url(/public/images/icons/dostavka_small_icon.png) no-repeat;
 }
-
 .discount_icon {
     background:url(/public/images/icons/discount_small_icon.png) no-repeat;
 }
-
 .bar_icon {
     background:url(/public/images/icons/bar_small_icon.png) no-repeat;
     padding-top:7px;
 }
-
 .menu_icon {
     background:url(/public/images/icons/menu_icon.png) no-repeat;
 }
-
 #additional .restaurant_header{
     margin:0 16px;
 }
 .restaurant_header a{
     color:#fff;
 }
-
-
-.margin020 {
-    margin:0 16px;
-}
-
-
-.margin0autoMax-width1600 {
-    margin: 0 auto;
-    max-width: 1480px;
-}
-
-/* 404
-***********************************************/
-body.error404 {
-    background:#000000;
-    color:#FFFFFF;
-}
-
-div.error404 {
-    margin:0 auto;
-    margin-top:100px;
-
-    width:750px;
-}
-
-.logo404 {
-    float:left;
-    margin-right:30px;
-}
-
-.text404 {
-    float:left;
-    padding:10px 0;
-    font-size:15px;
-}
-
-.title404 {
-    color:#ff6600;
-    font-size:39px;
-}
-
-.menu404 {
-    color:#009900;
-    font-size:15px;
-    padding-top:5px;
-}
-
-.menu404 a {
-    margin-right:10px;
-    color:#009900;
-    font-size:15px;
-}
+/* Страница 404
+- ---------------------------------------------------------------------*/
+body.error404 {background:#000000;color:#FFFFFF;}
+div.error404 {margin:0 auto;margin-top:100px;width:750px;}
+.logo404 { float:left;margin-right:30px;}
+.text404 {float:left;padding:10px 0;font-size:15px;}
+.title404 {color:#ff6600;font-size:39px;}
+.menu404 {color:#009900;font-size:15px;padding-top:5px;}
+.menu404 a {margin-right:10px;color:#009900;font-size:15px;}
