--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,9 +4,8 @@
     Author      : valmon, z-mode
     Description : Основной CSS файл
 
-    Основные цвета сайта:
-    Оранжевый : #FF6600;
-    Зелёный : #009900;
+    Оранжевый   : #FF6600;
+    Зелёный     : #009900;
 
  Reset
 -------------------------------------------------------------------*/
@@ -23,7 +22,7 @@ table {
     border-collapse:collapse;border:none;
     empty-cells:show;border-spacing:0;width:100%;
 }
-caption,th,td {text-align:left;font-weight:normal;}
+caption,th,td {text-align:left;font-weight:400;}
 blockquote:before,blockquote:after,q:before,q:after {content:"";}
 blockquote,q {quotes:"" "";}
 a {text-decoration:underline;color:#000;}
@@ -117,10 +116,10 @@ body {
     -moz-border-radius:3px;
     -webkit-border-radius:3px;
     border-radius:3px;
-    border: 1px solid #ff6600;
+    border: 1px solid #f60;
     text-decoration:none;
     padding:3px 12px;
-    color:#ff6600;
+    color:#f60;
 }
 
 /* Блок регистрации
@@ -153,13 +152,11 @@ body {
     overflow:hidden;
     position:relative;
 }
-#moods #bar {
-    position:relative;
-}
+#moods #bar {position:relative;}
 #moods #cursor_top {
     width:100%;
-    background:#cccccc;
-    border:1px solid #666666;
+    background:#ccc;
+    border:1px solid #666;
     height:20px;
     margin:10px 0;
     padding:2px 0 0 3px;
@@ -206,7 +203,7 @@ body {
 #moods .icon.active {
     padding-top:0;
     margin-left:-2px;
-    border:1px solid #ff6600;
+    border:1px solid #f60;
     width:132px;
 }
 #moods .icon img{
@@ -227,17 +224,16 @@ body {
     font-size:11px;
     font-family:Arial, Helvetica, sans-serif;
     padding:2px 3px;
-    color:#666666;
+    color:#666;
     margin-left:110px;
     position:absolute;
-    border-right:1px solid #666666;
-    border-bottom:1px solid #666666;
+    border-right:1px solid #666;
+    border-bottom:1px solid #666;
 
 }
 
 /* Панель алфавита
 -------------------------------------------------------------------*/
-
 #chars_container {
     margin:0 auto;
     margin-bottom:5px;
@@ -246,17 +242,14 @@ body {
     padding-top: 40px;
     height:182px;
 }
-
 #chars {
     padding-top:10px;
     margin-bottom:10px;
 }
-
 .chars_line {
     height:33px;
     margin-bottom:7px;
 }
-
 .chars_line .left{
     background:url(/public/images/chars_bg_left.png) no-repeat;
     width:4px;
@@ -279,9 +272,8 @@ body {
     font-size:18px;
     font-family:Tahoma,Arial;
 }
-
 .chars_line .center span{
-    padding:0px 6px;
+    padding:0 6px;
     margin: 0 2px;
     cursor:pointer;
 }
@@ -289,7 +281,6 @@ body {
 .chars_line .center span.current {
     background:#ddad22;
 }
-
 
 /* Строка поиска аля яндекс)
 -------------------------------------------------------------------*/
@@ -302,7 +293,7 @@ body {
     height:182px;
 }
 #search_types {
-    color:#000000;
+    color:#000;
     font-size:12px;
     padding:5px;
 }
@@ -315,13 +306,13 @@ body {
 }
 
 #search_sample {
-    color:#000000;
+    color:#000;
     font-size:12px;
     padding:5px;
 }
 #search_sample a {
     text-decoration:none;
-    border-bottom:1px dashed #000000;
+    border-bottom:1px dashed #000;
 }
 #search_sample a:hover {
     border:none;
@@ -500,7 +491,7 @@ body {
 }
 
 #restaurant_by_mood .restaurant_tags .item.current {
-    border:1px solid #ff6600;
+    border:1px solid #f60;
     width:50px;
     height: 50px;
 }
@@ -545,13 +536,13 @@ body {
 /* DISCOUNTS
 ----------------------------------------------*/
 .sale5 {
-    background:url(/public/images/sale5.jpg) no-repeat;
+    background:#d84705 url(/public/images/sale.jpg) 0 0 no-repeat;
 }
 .sale15 {
-    background:url(/public/images/sale15.jpg) no-repeat;
+    background:#d84705 url(/public/images/sale.jpg) 0 -39px no-repeat;
 }
 .sale20 {
-    background:url(/public/images/sale20.jpg) no-repeat;
+    background:#d84705 url(/public/images/sale.jpg) 0 -78px no-repeat;
 }
 
 
@@ -594,7 +585,7 @@ body {
 
 #footer_center .title {
     font-size:14px;
-    color:#000000;
+    color:#000;
     padding-bottom:10px;
 }
 
@@ -639,30 +630,30 @@ body {
 .person_block .more {
     float:right;
     font-size:14px;
-    color: #FF6600;
+    color: #f60;
 }
 #copyright {
     height:115px;
     background:#000;
-    color:#FFF;
+    color:#fff;
     margin-top:20px;
-	font-size:11px;
+    font-size:11px;
 }
 
 #copyright .left {
     float:left;
     padding:15px 0 5px 40px;
-	width:290px;
+    width:290px;
 }
 
 #copyright .left a{
-	color:#FFFFFF;
+    color:#FFFFFF;
 }
 
 #copyright .right {
     float:right;
     padding:15px 100px 10px 0;
-	color:#FF6600;
+    color:#FF6600;
 }
 
 
@@ -680,12 +671,12 @@ body {
     width:300px;
 }
 .smi a{
-	margin-right:10px;
-	color:#fff;
+    margin-right:10px;
+    color:#fff;
 }
 
 .smi a:hover{
-	color:#FF6600;
+    color:#FF6600;
 }
 /* Class
 - ---------------------------------------------------------------------*/
