--- a/blog/templates/skin/new/css/style.css
+++ b/blog/templates/skin/new/css/style.css
@@ -699,24 +699,25 @@ select { width: 99%; }
 .people .block-nav { margin-bottom: 20px; }
 .people h1 span { color: #6ec80d; }
 .people table { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
-.people table thead td { border-bottom:1px solid #000; padding: 5px 0; color:#777777;}
+.people table thead td { border-bottom:1px solid #000; padding: 0 0; color:#777777;line-height:31px;}
 .people table thead td.user { padding-left: 10px; }
 .people table thead td.strength, .people table thead td.rating { width: 80px; text-align: center; }
 .people table thead td.date { width: 150px; text-align: center; }
-.people table tbody td { padding: 15px 0; font-size: 11px; color: #999; border-bottom: 1px solid #ddd; }
+.people table tbody td { padding: 15px 0; font-size: 11px; color: #999; border-bottom: 1px solid #000; }
+.people table thead td { border-bottom:1px solid #000; padding: 0 0; color:#777777;}
 .people table tbody td span { color: #6ec80d; }
 .people table tbody td.user { padding-left: 10px; overflow: hidden; _height: 1%; }
 .people table tbody td.user img { float: left; margin-right: 7px; width: 24px; height: 24px; }
 .people table tbody td.user a.link { color: #000; font-size:20px; position: relative; top: 1px; }
 .people table tbody td.karma { color: #6ec80d; font-weight: bold; }
-.people table tbody td.strength { color: #000000; font-weight: bold; text-align: center; }
+.people table tbody td.strength {  text-align: center; }
 .people table tbody td.date { text-align: center; }
 .people table tbody td.rating { text-align: center; }
 .people table tbody td.rating span { padding-right: 12px; }
 .people table tbody td.rating.up span { background: url(../images/blog-rating-up.gif) no-repeat right 3px; }
 .people table tbody td.rating.down span { background: url(../images/blog-rating-down.gif) no-repeat right 3px; }
 .people table tbody td.rating strong { background: #c8c8c8; color: #000; padding: 3px; }
-
+.people table tbody td.newUsersCaption {font-size:19px; color:#009900;line-height:31px;}
 .people.top-blogs thead td.user { padding-left: 32px; }
 .people.top-blogs thead td.join-head { width: 40px; text-align: center; }
 .people.top-blogs thead td.readers, .people.top-blogs tbody td.readers { width: 100px; text-align: center; }
